--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     background-color: #D1172C;
     margin-bottom: 10px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     color: orange;
     font-size: 20px;
     text-align: start;
