--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
-    /* margin: 0 auto; */
-    /* padding: 0px; */
+    margin: 0 auto;
+    padding: 0px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .cabecera{
@@ -19,19 +19,28 @@
     max-height: 100px;    
 }
 
-.galeria{
+.cuerpo{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    gap: 5px;
 }
 .file{
     display: flex;
+    align-items: center;
+     justify-content:space-evenly;
     border-bottom: #D1172C 1px solid;
-    margin: 0;
-    justify-content: center;
+    margin: 0;   
+    border: 1px solid lightgray;
+    border-radius: 5px;
+    width: 350px;
+    
 }
 .txt{
-    width: 50%;
-    margin: 0;    
+    /* min-width:50%; */
+    margin: 0;
+    width: 50%; 
+    
 }
 .matricula{
     font-weight: 700;
@@ -45,18 +54,21 @@
 }
 .coord{
     font-size: 10px;
+    margin: 0;
+    padding-top: 5px;
 }
 .imgModelo{
+    width: 50%;
     max-height: 90px; 
     margin: 0px;
     border-radius: 5px;
-    margin-top: 5px;
+   
 
 }
 .imgModelo:hover{
-    max-height: 150px;
+    /* max-height: 150px;
     border-radius: 5px;
-    margin-top: 5px;
+    margin-top: 5px; */
 }
 
 .boton{
